--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,16 +1,16 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/getir?currentSchema=readingisgood
-    username: postgres
-    password: root
+    url: ${DATABASE_URL}
+    username: sample-username
+    password: sample-password
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
+    show-sql: false
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-
 app:
   security:
     user:
